# ChangeLog for net-analyzer/sara
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/Attic/ChangeLog,v 1.5 2004/08/05 23:16:40 squinky86 Exp $

*sara-5.1.1a (05 Aug 2004)

  05 Aug 2004; Jon Hood <squinky86@gentoo.org> sara-5.0.5b.ebuild,
  +sara-5.1.1a.ebuild:
  Stable x86 and testing version bumps.

  18 Jun 2004; David Holm <dholm@gentoo.org> sara-5.0.5b.ebuild:
  Added to ~ppc.

  15 Jun 2004; Jon Hood <squinky86@gentoo.org> sara-5.0.5b.ebuild:
  RESTRICT=nomirror because of license

*sara-5.0.5b (15 Jun 2004)

  15 Jun 2004; Jon Hood <squinky86@gentoo.org> +sara-5.0.5b.ebuild:
  Initial commit. Closes #40097. Thanks to Diego Garcia <diego@envigo.net> for
  the ebuild.
