@@ -1,6 +1,6 @@
-MD5 626344a50919df245e91565017585d40 sara-5.0.5b.ebuild 3535
-MD5 965c32010ff130fadf4bf99ac1188cf3 ChangeLog 749
+MD5 d4a50082fbb8a7956cd2d1bb390ee683 sara-5.0.5b.ebuild 3540
+MD5 b1ded9796e3a22d666a370af71597896 ChangeLog 904
 MD5 fb036e5fc8845306c0bdc8ed6e905ce1 metadata.xml 224
-MD5 88b6d3070f8cbed889f934b0102c31c1 sara-5.1.1a.ebuild 3537
+MD5 8a444e9eb89667367064322afcf90e80 sara-5.1.1a.ebuild 3554
 MD5 aed7b12c3de035d00503376c2482954f files/digest-sara-5.0.5b 61
 MD5 23446d529b197d73315dede9049525ed files/digest-sara-5.1.1a 61
