@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/Attic/sara-5.1.1a.ebuild,v 1.1 2004/08/05 23:16:40 squinky86 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/Attic/sara-5.1.1a.ebuild,v 1.2 2004/08/07 14:58:07 squinky86 Exp $
 
 DESCRIPTION="SARA Security Auditor's Research Assistant is a derived work of Security Administrator Tool for Analyzing Networks SATAN"
 SRC_URI="http://www-arc.com/sara/downloads/${P}.tgz"
@@ -84,6 +84,7 @@ src_install() {
 	doins html/tutorials/vulnerability/cert/*
 	insinto ${SARA_HOME}/html/tutorials/vulnerability/no_cve
 	doins html/tutorials/vulnerability/no_cve/*
+	dodir /usr/sbin
 	dosym ${D}${SARA_HOME}/sara /usr/sbin/sara
 	doman sara.8
 }
